Backend/traductor/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> init
Rule 1     init -> entorno_global
Rule 2     entorno_global -> entorno_global global
Rule 3     entorno_global -> global
Rule 4     global -> funcion_main
Rule 5     global -> instrucciones_modulo
Rule 6     instrucciones_modulo -> declaracion_struct
Rule 7     instrucciones_modulo -> declaracion_funciones
Rule 8     instrucciones_modulo -> declaracion_modulo
Rule 9     instrucciones_modulo -> COMENTARIO
Rule 10    lista_instrucciones_modulo -> lista_instrucciones_modulo instrucciones_modulo
Rule 11    lista_instrucciones_modulo -> instrucciones_modulo
Rule 12    declaracion_modulo -> encapsulamiento MOD IDENTIFICADOR LLAVEAP lista_instrucciones_modulo LLAVECL
Rule 13    funcion_main -> FN MAIN PARAP PARCL LLAVEAP lista_instrucciones LLAVECL
Rule 14    lista_instrucciones -> lista_instrucciones instruccion
Rule 15    lista_instrucciones -> instruccion
Rule 16    instruccion -> declaracion_variable
Rule 17    instruccion -> expresiones PCOMA
Rule 18    instruccion -> asignacion
Rule 19    instruccion -> sentencias
Rule 20    instruccion -> transferencia PCOMA
Rule 21    instruccion -> COMENTARIO
Rule 22    transferencia -> BREAK
Rule 23    transferencia -> RETURN
Rule 24    transferencia -> CONTINUE
Rule 25    transferencia -> RETURN expresiones
Rule 26    sentencias -> generar_if
Rule 27    sentencias -> generar_while
Rule 28    sentencias -> generar_for
Rule 29    sentencias -> generar_loop
Rule 30    sentencias -> generar_match
Rule 31    generar_if -> IF expresiones LLAVEAP lista_instrucciones LLAVECL generar_else
Rule 32    generar_else -> ELSE LLAVEAP lista_instrucciones LLAVECL
Rule 33    generar_else -> ELSE generar_if
Rule 34    generar_else -> empty
Rule 35    empty -> <empty>
Rule 36    generar_while -> WHILE expresiones LLAVEAP lista_instrucciones LLAVECL
Rule 37    generar_for -> FOR IDENTIFICADOR IN expresiones LLAVEAP lista_instrucciones LLAVECL
Rule 38    generar_loop -> LOOP LLAVEAP lista_instrucciones LLAVECL
Rule 39    generar_match -> MATCH expresiones LLAVEAP lista_cases LLAVECL
Rule 40    lista_cases -> lista_cases cases
Rule 41    lista_cases -> cases
Rule 42    cases -> lista_expresiones DOBFLECHA LLAVEAP lista_instrucciones LLAVECL
Rule 43    cases -> lista_expresiones DOBFLECHA instruccion
Rule 44    cases -> GBAJO DOBFLECHA LLAVEAP lista_instrucciones LLAVECL
Rule 45    cases -> GBAJO DOBFLECHA instruccion
Rule 46    declaracion_struct -> encapsulamiento STRUCT IDENTIFICADOR LLAVEAP lista_parametros LLAVECL
Rule 47    lista_parametros -> lista_parametros COMA parametros_declaracion
Rule 48    lista_parametros -> parametros_declaracion
Rule 49    parametros_declaracion -> encapsulamiento IDENTIFICADOR DOSPUNTOS tipo_dato
Rule 50    encapsulamiento -> PUB
Rule 51    encapsulamiento -> empty
Rule 52    declaracion_funciones -> encapsulamiento FN IDENTIFICADOR PARAP lista_parametros PARCL LLAVEAP lista_instrucciones LLAVECL
Rule 53    declaracion_funciones -> encapsulamiento FN IDENTIFICADOR PARAP lista_parametros PARCL FLECHA tipo_dato LLAVEAP lista_instrucciones LLAVECL
Rule 54    declaracion_funciones -> encapsulamiento FN IDENTIFICADOR PARAP PARCL LLAVEAP lista_instrucciones LLAVECL
Rule 55    declaracion_funciones -> encapsulamiento FN IDENTIFICADOR PARAP PARCL FLECHA tipo_dato LLAVEAP lista_instrucciones LLAVECL
Rule 56    declaracion_mutabilidad -> LET
Rule 57    declaracion_mutabilidad -> LET MUT
Rule 58    declaracion_variable -> declaracion_mutabilidad assig
Rule 59    assig -> IDENTIFICADOR DOSPUNTOS tipo_dato IGUAL res_assign PCOMA
Rule 60    assig -> IDENTIFICADOR IGUAL res_assign PCOMA
Rule 61    asignacion -> lista_identificadores IGUAL res_assign PCOMA
Rule 62    res_assign -> sentencias
Rule 63    res_assign -> expresiones
Rule 64    expresiones -> expresiones_aritmeticas
Rule 65    expresiones -> expresiones_logicas
Rule 66    expresiones -> expresiones_relacionales
Rule 67    expresiones -> valores
Rule 68    expresiones -> casting
Rule 69    expresiones -> funciones_vectores
Rule 70    expresiones -> print
Rule 71    expresiones -> parentesis
Rule 72    expresiones -> range
Rule 73    expresiones -> arrays_gen
Rule 74    expresiones -> vectores_gen
Rule 75    expresiones -> structs_gen
Rule 76    parentesis -> PARAP expresiones PARCL
Rule 77    lista_identificadores -> IDENTIFICADOR lista_identificadores_modulo
Rule 78    lista_identificadores -> IDENTIFICADOR lista_indices lista_identificadores_modulo
Rule 79    lista_identificadores_modulo -> DOSPUNTOS DOSPUNTOS lista_identificadores
Rule 80    lista_identificadores_modulo -> PUNTO lista_identificadores
Rule 81    lista_identificadores_modulo -> llamada_funcion
Rule 82    lista_identificadores_modulo -> empty
Rule 83    arrays_gen -> CORCHETEAP expresiones PCOMA expresiones CORCHETECL
Rule 84    arrays_gen -> CORCHETEAP lista_expresiones CORCHETECL
Rule 85    vectores_gen -> VECMIN NOT CORCHETEAP expresiones PCOMA expresiones CORCHETECL
Rule 86    vectores_gen -> VECMIN NOT CORCHETEAP lista_expresiones CORCHETECL
Rule 87    vectores_gen -> VECMAY DOSPUNTOS DOSPUNTOS NEW PARAP PARCL
Rule 88    vectores_gen -> VECMAY DOSPUNTOS DOSPUNTOS WITH_CAPACITY PARAP expresiones PARCL
Rule 89    structs_gen -> IDENTIFICADOR LLAVEAP lista_atributos LLAVECL
Rule 90    range -> expresiones PUNTO PUNTO expresiones
Rule 91    lista_indices -> lista_indices indice
Rule 92    lista_indices -> indice
Rule 93    indice -> CORCHETEAP expresiones CORCHETECL
Rule 94    lista_atributos -> lista_atributos COMA atributo_struct
Rule 95    lista_atributos -> atributo_struct
Rule 96    atributo_struct -> IDENTIFICADOR DOSPUNTOS expresiones
Rule 97    lista_expresiones -> lista_expresiones COMA expresiones
Rule 98    lista_expresiones -> lista_expresiones BARRA expresiones
Rule 99    lista_expresiones -> expresiones
Rule 100   expresiones_aritmeticas -> expresiones MAS expresiones
Rule 101   expresiones_aritmeticas -> expresiones MENOS expresiones
Rule 102   expresiones_aritmeticas -> expresiones POR expresiones
Rule 103   expresiones_aritmeticas -> expresiones DIV expresiones
Rule 104   expresiones_aritmeticas -> expresiones MODULO expresiones
Rule 105   expresiones_aritmeticas -> MENOS expresiones
Rule 106   expresiones_aritmeticas -> POW PARAP lista_expresiones PARCL
Rule 107   expresiones_aritmeticas -> POWF PARAP lista_expresiones PARCL
Rule 108   expresiones_aritmeticas -> expresiones PUNTO SQRT PARAP PARCL
Rule 109   expresiones_logicas -> expresiones AND expresiones
Rule 110   expresiones_logicas -> expresiones OR expresiones
Rule 111   expresiones_logicas -> NOT expresiones
Rule 112   expresiones_relacionales -> expresiones MAYOR expresiones
Rule 113   expresiones_relacionales -> expresiones MENOR expresiones
Rule 114   expresiones_relacionales -> expresiones DOBIGUAL expresiones
Rule 115   expresiones_relacionales -> expresiones DIF expresiones
Rule 116   expresiones_relacionales -> expresiones MAYORIG expresiones
Rule 117   expresiones_relacionales -> expresiones MENORIG expresiones
Rule 118   casting -> expresiones AS tipo_dato
Rule 119   casting -> expresiones PUNTO TO_STRING PARAP PARCL
Rule 120   casting -> expresiones PUNTO TO_OWNED PARAP PARCL
Rule 121   casting -> expresiones PUNTO CLONE PARAP PARCL
Rule 122   casting -> expresiones PUNTO ABS PARAP PARCL
Rule 123   casting -> expresiones PUNTO CHARS PARAP PARCL
Rule 124   funciones_vectores -> expresiones PUNTO PUSH PARAP expresiones PARCL
Rule 125   funciones_vectores -> expresiones PUNTO REMOVE PARAP expresiones PARCL
Rule 126   funciones_vectores -> expresiones PUNTO INSERT PARAP lista_expresiones PARCL
Rule 127   funciones_vectores -> expresiones PUNTO LEN PARAP PARCL
Rule 128   funciones_vectores -> expresiones PUNTO CAPACITY PARAP PARCL
Rule 129   funciones_vectores -> expresiones PUNTO CONTAINS PARAP CONCAT expresiones PARCL
Rule 130   valores -> CADENA
Rule 131   valores -> CARACTER
Rule 132   valores -> DECIMAL
Rule 133   valores -> NUMERO
Rule 134   valores -> TRUE
Rule 135   valores -> FALSE
Rule 136   valores -> lista_identificadores
Rule 137   llamada_funcion -> PARAP lista_parametros_llamada PARCL
Rule 138   llamada_funcion -> PARAP PARCL
Rule 139   lista_parametros_llamada -> lista_parametros_llamada COMA parametro_llamada
Rule 140   lista_parametros_llamada -> parametro_llamada
Rule 141   parametro_llamada -> referencia expresiones
Rule 142   parametro_llamada -> expresiones
Rule 143   print -> PRINTLN NOT PARAP lista_expresiones PARCL
Rule 144   tipo_dato -> I64
Rule 145   tipo_dato -> F64
Rule 146   tipo_dato -> STRING
Rule 147   tipo_dato -> CHAR
Rule 148   tipo_dato -> BOOL
Rule 149   tipo_dato -> STR
Rule 150   tipo_dato -> USIZE
Rule 151   tipo_dato -> lista_identificadores
Rule 152   tipo_dato -> tipo_array
Rule 153   tipo_dato -> tipo_vector
Rule 154   tipo_dato -> referencia tipo_dato
Rule 155   tipo_array -> tipo_array_1d
Rule 156   tipo_array -> tipo_array_md
Rule 157   referencia -> CONCAT MUT
Rule 158   referencia -> CONCAT
Rule 159   tipo_array_1d -> CORCHETEAP tipo_dato CORCHETECL
Rule 160   tipo_array_md -> CORCHETEAP tipo_dato PCOMA NUMERO CORCHETECL
Rule 161   tipo_array_md -> CORCHETEAP tipo_array_md PCOMA NUMERO CORCHETECL
Rule 162   tipo_vector -> VECMAY MENOR tipo_dato MAYOR

Terminals, with rules where they appear

ABS                  : 122
AND                  : 109
AS                   : 118
BARRA                : 98
BOOL                 : 148
BREAK                : 22
CADENA               : 130
CAPACITY             : 128
CARACTER             : 131
CHAR                 : 147
CHARS                : 123
CLONE                : 121
COMA                 : 47 94 97 139
COMENTARIO           : 9 21
CONCAT               : 129 157 158
CONTAINS             : 129
CONTINUE             : 24
CORCHETEAP           : 83 84 85 86 93 159 160 161
CORCHETECL           : 83 84 85 86 93 159 160 161
DECIMAL              : 132
DIF                  : 115
DIV                  : 103
DOBFLECHA            : 42 43 44 45
DOBIGUAL             : 114
DOSPUNTOS            : 49 59 79 79 87 87 88 88 96
ELSE                 : 32 33
F64                  : 145
FALSE                : 135
FLECHA               : 53 55
FN                   : 13 52 53 54 55
FOR                  : 37
GBAJO                : 44 45
I64                  : 144
IDENTIFICADOR        : 12 37 46 49 52 53 54 55 59 60 77 78 89 96
IF                   : 31
IGUAL                : 59 60 61
IN                   : 37
INSERT               : 126
LEN                  : 127
LET                  : 56 57
LLAVEAP              : 12 13 31 32 36 37 38 39 42 44 46 52 53 54 55 89
LLAVECL              : 12 13 31 32 36 37 38 39 42 44 46 52 53 54 55 89
LOOP                 : 38
MAIN                 : 13
MAS                  : 100
MATCH                : 39
MAYOR                : 112 162
MAYORIG              : 116
MENOR                : 113 162
MENORIG              : 117
MENOS                : 101 105
MOD                  : 12
MODULO               : 104
MUT                  : 57 157
NEW                  : 87
NOT                  : 85 86 111 143
NUMERO               : 133 160 161
OR                   : 110
PARAP                : 13 52 53 54 55 76 87 88 106 107 108 119 120 121 122 123 124 125 126 127 128 129 137 138 143
PARCL                : 13 52 53 54 55 76 87 88 106 107 108 119 120 121 122 123 124 125 126 127 128 129 137 138 143
PCOMA                : 17 20 59 60 61 83 85 160 161
POR                  : 102
POW                  : 106
POWF                 : 107
PRINTLN              : 143
PUB                  : 50
PUNTO                : 80 90 90 108 119 120 121 122 123 124 125 126 127 128 129
PUSH                 : 124
REMOVE               : 125
RETURN               : 23 25
SQRT                 : 108
STR                  : 149
STRING               : 146
STRUCT               : 46
TO_OWNED             : 120
TO_STRING            : 119
TRUE                 : 134
USIZE                : 150
VECMAY               : 87 88 162
VECMIN               : 85 86
WHILE                : 36
WITH_CAPACITY        : 88
error                : 

Nonterminals, with rules where they appear

arrays_gen           : 73
asignacion           : 18
assig                : 58
atributo_struct      : 94 95
cases                : 40 41
casting              : 68
declaracion_funciones : 7
declaracion_modulo   : 8
declaracion_mutabilidad : 58
declaracion_struct   : 6
declaracion_variable : 16
empty                : 34 51 82
encapsulamiento      : 12 46 49 52 53 54 55
entorno_global       : 1 2
expresiones          : 17 25 31 36 37 39 63 76 83 83 85 85 88 90 90 93 96 97 98 99 100 100 101 101 102 102 103 103 104 104 105 108 109 109 110 110 111 112 112 113 113 114 114 115 115 116 116 117 117 118 119 120 121 122 123 124 124 125 125 126 127 128 129 129 141 142
expresiones_aritmeticas : 64
expresiones_logicas  : 65
expresiones_relacionales : 66
funcion_main         : 4
funciones_vectores   : 69
generar_else         : 31
generar_for          : 28
generar_if           : 26 33
generar_loop         : 29
generar_match        : 30
generar_while        : 27
global               : 2 3
indice               : 91 92
init                 : 0
instruccion          : 14 15 43 45
instrucciones_modulo : 5 10 11
lista_atributos      : 89 94
lista_cases          : 39 40
lista_expresiones    : 42 43 84 86 97 98 106 107 126 143
lista_identificadores : 61 79 80 136 151
lista_identificadores_modulo : 77 78
lista_indices        : 78 91
lista_instrucciones  : 13 14 31 32 36 37 38 42 44 52 53 54 55
lista_instrucciones_modulo : 10 12
lista_parametros     : 46 47 52 53
lista_parametros_llamada : 137 139
llamada_funcion      : 81
parametro_llamada    : 139 140
parametros_declaracion : 47 48
parentesis           : 71
print                : 70
range                : 72
referencia           : 141 154
res_assign           : 59 60 61
sentencias           : 19 62
structs_gen          : 75
tipo_array           : 152
tipo_array_1d        : 155
tipo_array_md        : 156 161
tipo_dato            : 49 53 55 59 118 154 159 160 162
tipo_vector          : 153
transferencia        : 20
valores              : 67
vectores_gen         : 74

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . entorno_global
    (2) entorno_global -> . entorno_global global
    (3) entorno_global -> . global
    (4) global -> . funcion_main
    (5) global -> . instrucciones_modulo
    (13) funcion_main -> . FN MAIN PARAP PARCL LLAVEAP lista_instrucciones LLAVECL
    (6) instrucciones_modulo -> . declaracion_struct
    (7) instrucciones_modulo -> . declaracion_funciones
    (8) instrucciones_modulo -> . declaracion_modulo
    (9) instrucciones_modulo -> . COMENTARIO
    (46) declaracion_struct -> . encapsulamiento STRUCT IDENTIFICADOR LLAVEAP lista_parametros LLAVECL
    (52) declaracion_funciones -> . encapsulamiento FN IDENTIFICADOR PARAP lista_parametros PARCL LLAVEAP lista_instrucciones LLAVECL
    (53) declaracion_funciones -> . encapsulamiento FN IDENTIFICADOR PARAP lista_parametros PARCL FLECHA tipo_dato LLAVEAP lista_instrucciones LLAVECL
    (54) declaracion_funciones -> . encapsulamiento FN IDENTIFICADOR PARAP PARCL LLAVEAP lista_instrucciones LLAVECL
    (55) declaracion_funciones -> . encapsulamiento FN IDENTIFICADOR PARAP PARCL FLECHA tipo_dato LLAVEAP lista_instrucciones LLAVECL
    (12) declaracion_modulo -> . encapsulamiento MOD IDENTIFICADOR LLAVEAP lista_instrucciones_modulo LLAVECL
    (50) encapsulamiento -> . PUB
    (51) encapsulamiento -> . empty
    (35) empty -> .

  ! shift/reduce conflict for FN resolved as shift
    FN              shift and go to state 6
    COMENTARIO      shift and go to state 10
    PUB             shift and go to state 12
    STRUCT          reduce using rule 35 (empty -> .)
    MOD             reduce using rule 35 (empty -> .)

  ! FN              [ reduce using rule 35 (empty -> .) ]

    init                           shift and go to state 1
    entorno_global                 shift and go to state 2
    global                         shift and go to state 3
    funcion_main                   shift and go to state 4
    instrucciones_modulo           shift and go to state 5
    declaracion_struct             shift and go to state 7
    declaracion_funciones          shift and go to state 8
    declaracion_modulo             shift and go to state 9
    encapsulamiento                shift and go to state 11
    empty                          shift and go to state 13

state 1

    (0) S' -> init .



state 2

    (1) init -> entorno_global .
    (2) entorno_global -> entorno_global . global
    (4) global -> . funcion_main
    (5) global -> . instrucciones_modulo
    (13) funcion_main -> . FN MAIN PARAP PARCL LLAVEAP lista_instrucciones LLAVECL
    (6) instrucciones_modulo -> . declaracion_struct
    (7) instrucciones_modulo -> . declaracion_funciones
    (8) instrucciones_modulo -> . declaracion_modulo
    (9) instrucciones_modulo -> . COMENTARIO
    (46) declaracion_struct -> . encapsulamiento STRUCT IDENTIFICADOR LLAVEAP lista_parametros LLAVECL
    (52) declaracion_funciones -> . encapsulamiento FN IDENTIFICADOR PARAP lista_parametros PARCL LLAVEAP lista_instrucciones LLAVECL
    (53) declaracion_funciones -> . encapsulamiento FN IDENTIFICADOR PARAP lista_parametros PARCL FLECHA tipo_dato LLAVEAP lista_instrucciones LLAVECL
    (54) declaracion_funciones -> . encapsulamiento FN IDENTIFICADOR PARAP PARCL LLAVEAP lista_instrucciones LLAVECL
    (55) declaracion_funciones -> . encapsulamiento FN IDENTIFICADOR PARAP PARCL FLECHA tipo_dato LLAVEAP lista_instrucciones LLAVECL
    (12) declaracion_modulo -> . encapsulamiento MOD IDENTIFICADOR LLAVEAP lista_instrucciones_modulo LLAVECL
    (50) encapsulamiento -> . PUB
    (51) encapsulamiento -> . empty
    (35) empty -> .

  ! shift/reduce conflict for FN resolved as shift
    $end            reduce using rule 1 (init -> entorno_global .)
    FN              shift and go to state 6
    COMENTARIO      shift and go to state 10
    PUB             shift and go to state 12
    STRUCT          reduce using rule 35 (empty -> .)
    MOD             reduce using rule 35 (empty -> .)

  ! FN              [ reduce using rule 35 (empty -> .) ]

    global                         shift and go to state 14
    funcion_main                   shift and go to state 4
    instrucciones_modulo           shift and go to state 5
    declaracion_struct             shift and go to state 7
    declaracion_funciones          shift and go to state 8
    declaracion_modulo             shift and go to state 9
    encapsulamiento                shift and go to state 11
    empty                          shift and go to state 13

state 3

    (3) entorno_global -> global .

    FN              reduce using rule 3 (entorno_global -> global .)
    COMENTARIO      reduce using rule 3 (entorno_global -> global .)
    PUB             reduce using rule 3 (entorno_global -> global .)
    STRUCT          reduce using rule 3 (entorno_global -> global .)
    MOD             reduce using rule 3 (entorno_global -> global .)
    $end            reduce using rule 3 (entorno_global -> global .)


state 4

    (4) global -> funcion_main .

    FN              reduce using rule 4 (global -> funcion_main .)
    COMENTARIO      reduce using rule 4 (global -> funcion_main .)
    PUB             reduce using rule 4 (global -> funcion_main .)
    STRUCT          reduce using rule 4 (global -> funcion_main .)
    MOD             reduce using rule 4 (global -> funcion_main .)
    $end            reduce using rule 4 (global -> funcion_main .)


state 5

    (5) global -> instrucciones_modulo .

    FN              reduce using rule 5 (global -> instrucciones_modulo .)
    COMENTARIO      reduce using rule 5 (global -> instrucciones_modulo .)
    PUB             reduce using rule 5 (global -> instrucciones_modulo .)
    STRUCT          reduce using rule 5 (global -> instrucciones_modulo .)
    MOD             reduce using rule 5 (global -> instrucciones_modulo .)
    $end            reduce using rule 5 (global -> instrucciones_modulo .)


state 6

    (13) funcion_main -> FN . MAIN PARAP PARCL LLAVEAP lista_instrucciones LLAVECL

    MAIN            shift and go to state 15


state 7

    (6) instrucciones_modulo -> declaracion_struct .

    FN              reduce using rule 6 (instrucciones_modulo -> declaracion_struct .)
    COMENTARIO      reduce using rule 6 (instrucciones_modulo -> declaracion_struct .)
    PUB             reduce using rule 6 (instrucciones_modulo -> declaracion_struct .)
    STRUCT          reduce using rule 6 (instrucciones_modulo -> declaracion_struct .)
    MOD             reduce using rule 6 (instrucciones_modulo -> declaracion_struct .)
    $end            reduce using rule 6 (instrucciones_modulo -> declaracion_struct .)
    LLAVECL         reduce using rule 6 (instrucciones_modulo -> declaracion_struct .)


state 8

    (7) instrucciones_modulo -> declaracion_funciones .

    FN              reduce using rule 7 (instrucciones_modulo -> declaracion_funciones .)
    COMENTARIO      reduce using rule 7 (instrucciones_modulo -> declaracion_funciones .)
    PUB             reduce using rule 7 (instrucciones_modulo -> declaracion_funciones .)
    STRUCT          reduce using rule 7 (instrucciones_modulo -> declaracion_funciones .)
    MOD             reduce using rule 7 (instrucciones_modulo -> declaracion_funciones .)
    $end            reduce using rule 7 (instrucciones_modulo -> declaracion_funciones .)
    LLAVECL         reduce using rule 7 (instrucciones_modulo -> declaracion_funciones .)


state 9

    (8) instrucciones_modulo -> declaracion_modulo .

    FN              reduce using rule 8 (instrucciones_modulo -> declaracion_modulo .)
    COMENTARIO      reduce using rule 8 (instrucciones_modulo -> declaracion_modulo .)
    PUB             reduce using rule 8 (instrucciones_modulo -> declaracion_modulo .)
    STRUCT          reduce using rule 8 (instrucciones_modulo -> declaracion_modulo .)
    MOD             reduce using rule 8 (instrucciones_modulo -> declaracion_modulo .)
    $end            reduce using rule 8 (instrucciones_modulo -> declaracion_modulo .)
    LLAVECL         reduce using rule 8 (instrucciones_modulo -> declaracion_modulo .)


state 10

    (9) instrucciones_modulo -> COMENTARIO .

    FN              reduce using rule 9 (instrucciones_modulo -> COMENTARIO .)
    COMENTARIO      reduce using rule 9 (instrucciones_modulo -> COMENTARIO .)
    PUB             reduce using rule 9 (instrucciones_modulo -> COMENTARIO .)
    STRUCT          reduce using rule 9 (instrucciones_modulo -> COMENTARIO .)
    MOD             reduce using rule 9 (instrucciones_modulo -> COMENTARIO .)
    $end            reduce using rule 9 (instrucciones_modulo -> COMENTARIO .)
    LLAVECL         reduce using rule 9 (instrucciones_modulo -> COMENTARIO .)


state 11

    (46) declaracion_struct -> encapsulamiento . STRUCT IDENTIFICADOR LLAVEAP lista_parametros LLAVECL
    (52) declaracion_funciones -> encapsulamiento . FN IDENTIFICADOR PARAP lista_parametros PARCL LLAVEAP lista_instrucciones LLAVECL
    (53) declaracion_funciones -> encapsulamiento . FN IDENTIFICADOR PARAP lista_parametros PARCL FLECHA tipo_dato LLAVEAP lista_instrucciones LLAVECL
    (54) declaracion_funciones -> encapsulamiento . FN IDENTIFICADOR PARAP PARCL LLAVEAP lista_instrucciones LLAVECL
    (55) declaracion_funciones -> encapsulamiento . FN IDENTIFICADOR PARAP PARCL FLECHA tipo_dato LLAVEAP lista_instrucciones LLAVECL
    (12) declaracion_modulo -> encapsulamiento . MOD IDENTIFICADOR LLAVEAP lista_instrucciones_modulo LLAVECL

    STRUCT          shift and go to state 16
    FN              shift and go to state 17
    MOD             shift and go to state 18


state 12

    (50) encapsulamiento -> PUB .

    STRUCT          reduce using rule 50 (encapsulamiento -> PUB .)
    FN              reduce using rule 50 (encapsulamiento -> PUB .)
    MOD             reduce using rule 50 (encapsulamiento -> PUB .)
    IDENTIFICADOR   reduce using rule 50 (encapsulamiento -> PUB .)


state 13

    (51) encapsulamiento -> empty .

    STRUCT          reduce using rule 51 (encapsulamiento -> empty .)
    FN              reduce using rule 51 (encapsulamiento -> empty .)
    MOD             reduce using rule 51 (encapsulamiento -> empty .)
    IDENTIFICADOR   reduce using rule 51 (encapsulamiento -> empty .)


state 14

    (2) entorno_global -> entorno_global global .

    FN              reduce using rule 2 (entorno_global -> entorno_global global .)
    COMENTARIO      reduce using rule 2 (entorno_global -> entorno_global global .)
    PUB             reduce using rule 2 (entorno_global -> entorno_global global .)
    STRUCT          reduce using rule 2 (entorno_global -> entorno_global global .)
    MOD             reduce using rule 2 (entorno_global -> entorno_global global .)
    $end            reduce using rule 2 (entorno_global -> entorno_global global .)


state 15

    (13) funcion_main -> FN MAIN . PARAP PARCL LLAVEAP lista_instrucciones LLAVECL

    PARAP           shift and go to state 19


state 16

    (46) declaracion_struct -> encapsulamiento STRUCT . IDENTIFICADOR LLAVEAP lista_parametros LLAVECL

    IDENTIFICADOR   shift and go to state 20


state 17

    (52) declaracion_funciones -> encapsulamiento FN . IDENTIFICADOR PARAP lista_parametros PARCL LLAVEAP lista_instrucciones LLAVECL
    (53) declaracion_funciones -> encapsulamiento FN . IDENTIFICADOR PARAP lista_parametros PARCL FLECHA tipo_dato LLAVEAP lista_instrucciones LLAVECL
    (54) declaracion_funciones -> encapsulamiento FN . IDENTIFICADOR PARAP PARCL LLAVEAP lista_instrucciones LLAVECL
    (55) declaracion_funciones -> encapsulamiento FN . IDENTIFICADOR PARAP PARCL FLECHA tipo_dato LLAVEAP lista_instrucciones LLAVECL

    IDENTIFICADOR   shift and go to state 21


state 18

    (12) declaracion_modulo -> encapsulamiento MOD . IDENTIFICADOR LLAVEAP lista_instrucciones_modulo LLAVECL

    IDENTIFICADOR   shift and go to state 22


state 19

    (13) funcion_main -> FN MAIN PARAP . PARCL LLAVEAP lista_instrucciones LLAVECL

    PARCL           shift and go to state 23


state 20

    (46) declaracion_struct -> encapsulamiento STRUCT IDENTIFICADOR . LLAVEAP lista_parametros LLAVECL

    LLAVEAP         shift and go to state 24


state 21

    (52) declaracion_funciones -> encapsulamiento FN IDENTIFICADOR . PARAP lista_parametros PARCL LLAVEAP lista_instrucciones LLAVECL
    (53) declaracion_funciones -> encapsulamiento FN IDENTIFICADOR . PARAP lista_parametros PARCL FLECHA tipo_dato LLAVEAP lista_instrucciones LLAVECL
    (54) declaracion_funciones -> encapsulamiento FN IDENTIFICADOR . PARAP PARCL LLAVEAP lista_instrucciones LLAVECL
    (55) declaracion_funciones -> encapsulamiento FN IDENTIFICADOR . PARAP PARCL FLECHA tipo_dato LLAVEAP lista_instrucciones LLAVECL

    PARAP           shift and go to state 25


state 22

    (12) declaracion_modulo -> encapsulamiento MOD IDENTIFICADOR . LLAVEAP lista_instrucciones_modulo LLAVECL

    LLAVEAP         shift and go to state 26


state 23

    (13) funcion_main -> FN MAIN PARAP PARCL . LLAVEAP lista_instrucciones LLAVECL

    LLAVEAP         shift and go to state 27


state 24

    (46) declaracion_struct -> encapsulamiento STRUCT IDENTIFICADOR LLAVEAP . lista_parametros LLAVECL
    (47) lista_parametros -> . lista_parametros COMA parametros_declaracion
    (48) lista_parametros -> . parametros_declaracion
    (49) parametros_declaracion -> . encapsulamiento IDENTIFICADOR DOSPUNTOS tipo_dato
    (50) encapsulamiento -> . PUB
    (51) encapsulamiento -> . empty
    (35) empty -> .

    PUB             shift and go to state 12
    IDENTIFICADOR   reduce using rule 35 (empty -> .)

    encapsulamiento                shift and go to state 28
    lista_parametros               shift and go to state 29
    parametros_declaracion         shift and go to state 30
    empty                          shift and go to state 13

state 25

    (52) declaracion_funciones -> encapsulamiento FN IDENTIFICADOR PARAP . lista_parametros PARCL LLAVEAP lista_instrucciones LLAVECL
    (53) declaracion_funciones -> encapsulamiento FN IDENTIFICADOR PARAP . lista_parametros PARCL FLECHA tipo_dato LLAVEAP lista_instrucciones LLAVECL
    (54) declaracion_funciones -> encapsulamiento FN IDENTIFICADOR PARAP . PARCL LLAVEAP lista_instrucciones LLAVECL
    (55) declaracion_funciones -> encapsulamiento FN IDENTIFICADOR PARAP . PARCL FLECHA tipo_dato LLAVEAP lista_instrucciones LLAVECL
    (47) lista_parametros -> . lista_parametros COMA parametros_declaracion
    (48) lista_parametros -> . parametros_declaracion
    (49) parametros_declaracion -> . encapsulamiento IDENTIFICADOR DOSPUNTOS tipo_dato
    (50) encapsulamiento -> . PUB
    (51) encapsulamiento -> . empty
    (35) empty -> .

    PARCL           shift and go to state 32
    PUB             shift and go to state 12
    IDENTIFICADOR   reduce using rule 35 (empty -> .)

    encapsulamiento                shift and go to state 28
    lista_parametros               shift and go to state 31
    parametros_declaracion         shift and go to state 30
    empty                          shift and go to state 13

state 26

    (12) declaracion_modulo -> encapsulamiento MOD IDENTIFICADOR LLAVEAP . lista_instrucciones_modulo LLAVECL
    (10) lista_instrucciones_modulo -> . lista_instrucciones_modulo instrucciones_modulo
    (11) lista_instrucciones_modulo -> . instrucciones_modulo
    (6) instrucciones_modulo -> . declaracion_struct
    (7) instrucciones_modulo -> . declaracion_funciones
    (8) instrucciones_modulo -> . declaracion_modulo
    (9) instrucciones_modulo -> . COMENTARIO
    (46) declaracion_struct -> . encapsulamiento STRUCT IDENTIFICADOR LLAVEAP lista_parametros LLAVECL
    (52) declaracion_funciones -> . encapsulamiento FN IDENTIFICADOR PARAP lista_parametros PARCL LLAVEAP lista_instrucciones LLAVECL
    (53) declaracion_funciones -> . encapsulamiento FN IDENTIFICADOR PARAP lista_parametros PARCL FLECHA tipo_dato LLAVEAP lista_instrucciones LLAVECL
    (54) declaracion_funciones -> . encapsulamiento FN IDENTIFICADOR PARAP PARCL LLAVEAP lista_instrucciones LLAVECL
    (55) declaracion_funciones -> . encapsulamiento FN IDENTIFICADOR PARAP PARCL FLECHA tipo_dato LLAVEAP lista_instrucciones LLAVECL
    (12) declaracion_modulo -> . encapsulamiento MOD IDENTIFICADOR LLAVEAP lista_instrucciones_modulo LLAVECL
    (50) encapsulamiento -> . PUB
    (51) encapsulamiento -> . empty
    (35) empty -> .

    COMENTARIO      shift and go to state 10
    PUB             shift and go to state 12
    STRUCT          reduce using rule 35 (empty -> .)
    FN              reduce using rule 35 (empty -> .)
    MOD             reduce using rule 35 (empty -> .)

    encapsulamiento                shift and go to state 11
    lista_instrucciones_modulo     shift and go to state 33
    instrucciones_modulo           shift and go to state 34
    declaracion_struct             shift and go to state 7
    declaracion_funciones          shift and go to state 8
    declaracion_modulo             shift and go to state 9
    empty                          shift and go to state 13

state 27

    (13) funcion_main -> FN MAIN PARAP PARCL LLAVEAP . lista_instrucciones LLAVECL
    (14) lista_instrucciones -> . lista_instrucciones instruccion
    (15) lista_instrucciones -> . instruccion
    (16) instruccion -> . declaracion_variable
    (17) instruccion -> . expresiones PCOMA
    (18) instruccion -> . asignacion
    (19) instruccion -> . sentencias
    (20) instruccion -> . transferencia PCOMA
    (21) instruccion -> . COMENTARIO
    (58) declaracion_variable -> . declaracion_mutabilidad assig
    (64) expresiones -> . expresiones_aritmeticas
    (65) expresiones -> . expresiones_logicas
    (66) expresiones -> . expresiones_relacionales
    (67) expresiones -> . valores
